10/02/17:
	- Fixed JFrames not being removed from the ArrayList